2007-05-17  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Chad Miller

	* gnome-settings-dbus.c: (gnome_settings_server_init): double-check
	that DBUS really passed us an error (closes bug #439208)

2007-04-11  Ross Burton  <ross@burtonini.com>

	* xrdb/General.ad:
	* xrdb/Motif.ad:
	* xrdb/Editres.ad:
	* xrdb/Xaw.ad:
	* xrdb/Emacs.ad:
	Remove all settings that are not related to colour (#428615).

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (dialog_show): fix multimedia
	window appearing in a different position when shown for the first time
	and thus causing a "jump" effect on the second (fixes bug #400915)

2007-02-28  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): ref
	the master track (fixes bug #412467)

2007-02-25  Jens Granseuer  <jensgr@gmx.net>

	* test-media-window.c: (test_window): fix compiler warning

2007-02-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-accessibility-keyboard.c:
	(gnome_settings_accessibility_keyboard_load): correctly pass the
	function address when setting up the event filter

2007-02-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-keybindings.c: (gnome_settings_keybindings_init):
	don't install the same filter twice for the default root window (fixes
	bug #408643)

2007-02-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-mouse.c: (configure_button_layout),
	(set_left_handed): if X refuses to update the pointer mapping (busy)
	don't just ignore the error but retry after a short delay (fixes bug
	#349538)

2007-02-14  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_set_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume): properly round volumess so that
	volume-up and volume-down act symmetrically, ie. lowering and raising
	volume will end up at the original level (fixes bug #389996)

2007-02-10  Jens Granseuer  <jensgr@gmx.net>
